--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@mercadopago/sdk-react": "^0.0.19",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-popover": "^1.1.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "lucide-react": "^0.378.0",
     "mercadopago": "^2.0.9",
     "mongoose": "^8.4.0",
